@@ -9,6 +9,7 @@ Changes in Release 1.0.10
 * closed MYFACES-177
 * closed MYFACES-199
 * closed MYFACES-209
+* closed MYFACES-242
 ----------------------------------------------------------------------
 Changes in Release 1.0.9
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
